scoringmp/templates/deployment.yaml
---
# Source: scoringmp/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "scoringmp-deployment"
  labels:
    chart: 'scoringmp-1.0.0'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "scoringmp-selector"
        version: "current"
    spec:
      serviceAccountName: reefer-simulator
      containers:
      - name: "scoringmp"
        image: "ibmcase/kcontainer-scoringmp-ms:0.1.42"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
        volumeMounts:
          - mountPath: "/opt/ol/wlp/usr/servers/defaultServer/bootstrap.properties"
            subPath: "bootstrap.properties"
            name: openliberty-bootstrap
            readOnly: true
          - mountPath: "/config/resources/security"
            name: kafka-truststore
            readOnly: true
      volumes:
        - name: openliberty-bootstrap
          secret:
            secretName: "openliberty-bootstrap"
        - name: kafka-truststore
          secret:
            secretName: "eventstreams-truststore-jks"
