scoringmp/templates/service.yaml
---
# Source: scoringmp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "scoringmp-service"
  labels:
    chart: "scoringmp-1.0.0"
spec:
  type: NodePort
  ports:
  - name: http
    port: 9080
    nodePort: 30211
  - name: https
    port: 9443
  selector:
    app: "scoringmp-selector"
