scoringmp/templates/route.yaml
---
# Source: scoringmp/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-scoringmp
  labels:
    chart: 'scoringmp-1.0.0'
spec:
  # Not a required attribute but ArgoCD fails sync without this field included in the YAML
  host: kcontainer-scoringmp-eda-sandbox.apps.green.ocp.csplab.local
  path: /
  to:
    kind: Service
    name: "scoringmp-service"
    weight: 100
  port:
    targetPort: http
# Not a required attribute but ArgoCD fails sync without this field included in the YAML
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    host: kcontainer-scoringmp-eda-sandbox.apps.green.ocp.csplab.local
    routerName: default
    wildcardPolicy: None
